# e2e-chatbot

./: . cursorrules  .env.example  .gitignore  Makefile  README.md  pyproject.toml
backend/: main.py  optimized_prompt_workflow.py
backend/api/v1/: chatbot.py
backend/core/: config.py  database.py  security.py
backend/crud/: conversation.py  user.py
backend/models/: conversation.py  message.py  user.py
backend/routers/: __init__.py  auth.py  chatbot.py
backend/schemas/: chatbot.py  user.py
backend/services/: multi_step_agent.py  prompt_optim.py
backend/services/chatbot_service/: base_workflow.py  chatbot_service.py  multi_step_agent_workflow.py  prompt_optimization_workflow.py  simple_chatbot_workflow.py  workflow_factory.py
backend/tests/: test_db.py
components/: AgentTypeSelector.tsx  ModelSelector.tsx
components/layout/: DashboardLayout.tsx  Header.tsx  SettingsDrawer.tsx  Sidebar.tsx
dockerfiles/: postgre-docker-compose.yaml
frontend/: gradio_app.py
ui/: package.json  pnpm-lock.yaml
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/dashboard/: page.tsx
ui/app/signup/: page.tsx
ui/components/: animations.css  authentication-04.tsx  dashboard-03.tsx
ui/components/authentication/: Signup.tsx
ui/hooks/: useAuth.ts
ui/lib/: api.ts
