[tool.poetry]
name = "e2e-chatbot"
version = "0.1.0"
description = ""
authors = ["Minh-Duc Bui <minhduc2k31905@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
