[tool.poetry]
name = "e2e-chatbot"
version = "0.1.0"
description = ""
authors = ["Minh-Duc Bui <minhduc2k31905@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
loguru = "^0.7.2"
pydantic-settings = "^2.5.2"
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
uvloop = "^0.20.0"
httptools = "^0.6.1"
jwt = "^1.3.1"
passlib = "^1.7.4"
pyjwt = "^2.9.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
python-multipart = "^0.0.10"
bcrypt = "^4.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
anyio = "^4.6.0"
pytest-asyncio = "^0.24.0"
pytest-tornasync = "^0.6.0.post2"
pytest-trio = "^0.8.0"
pytest-twisted = "^1.14.3"
twisted = "^24.7.0"
httpx = "^0.27.2"
aiosqlite = "^0.20.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
